--- a/app/about.jade
+++ b/app/about.jade
@@ -36,12 +36,12 @@ block content
           .faq-answer.js-faq-answer
             p Круглые таблетки от белого до кремового цвета с гладкой поверхностью и фаской. 
         li.js-faq-question
-          .faq-question Фармодинамика
+          .faq-question Фармакодинамика
           .faq-answer.js-faq-answer
             p Препарат Гастал<sup>&reg;</sup> - комбинированное антацидное средство, которое снижает повышенную кислотность желудочного сока и не оказывает стимулирующего влияния на секрецию желудочного сока. Алюминия гидроксида-магния карбоната гель и магния гидроксид обеспечивают немедленную (сразу же после приема) и продолжительную (около 2 часов) нейтрализацию соляной кислоты желудочного сока, с поддержанием кислотности в желудке на физиологическом уровне (pH 3-5). Одна таблетка Гастал<sup>&reg;</sup> нейтрализует 21,5 ммоль соляной кислоты.
             p Препарат Гастал<sup>&reg;</sup> подавляет действие пенсина, лизолецитина и желчных кислот, устраняет диспепсические явления. Усиливает защитные и регенетативные процессы в слизистой оболочке желудка. Ионы алюминия оказывают цитопротективное действие за счет повышения секреции муцина и натрия гидрокарбоната, активации простагландина E2 и N0, накопления эпидермального фактора роста в месте повреждения слизистой оболочки, повышения концентрации фосфолипидов в стенках желудка.
         li.js-faq-question
-          .faq-question Фармокинетика
+          .faq-question Фармакокинетика
           .faq-answer.js-faq-answer
             p Препарат Гастал<sup>&reg;</sup> не оказывает системного воздействия у пациентов с нормальной функцией почек. После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосватами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягким слабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната. 
         li.js-faq-question
@@ -59,7 +59,7 @@ block content
           .faq-answer.js-faq-answer
             p При хронической почечной недостаточности (ХПН), беременности и в период грудного вскармливания, взрослые и дети старше 12 лет с массой тела менее 50 кг, детский возраст от 6 до 12 лет, пожилой возраст.
         li.js-faq-question
-          .faq-question Применение при беременности и в период грудного вскармливания
+          .faq-question Применение во время беременности и в период грудного вскармливания
           .faq-answer.js-faq-answer
             p Препарат Гастал<sup>&reg;</sup> не выделяется с грудным молоком. При применении во время беременности и в период грудного вскармливания необходимо оценить соотношение пользы для матери и риска для плода и младенца.
         li.js-faq-question
@@ -134,9 +134,9 @@ block content
         .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
-          Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
-          Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
-          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
+          Общество с ограниченной ответственностью «Тева»  Россия, 115054, 
+          город Москва, улица Валовая, дом 35<br>
+          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
         .holder
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
