--- a/app/faq.jade
+++ b/app/faq.jade
@@ -26,7 +26,7 @@ block content
       .faq-title Часто задаваемые вопросы
       ul.faq-list
         li.js-faq-question
-          .faq-question Надо ли разжевывать таблетку Гастала<sup>&reg;</sup> или лучше просто запить ее водой?
+          .faq-question Надо ли разжевывать таблетку Гастала или лучше просто запить ее водой?
           .faq-answer.js-faq-answer
             p Таблетки Гастала<sup>&reg;</sup> не рекомендуется проглатывать целиком и запивать водой.
             p Разжевывать или измельчать их тоже не нужно! Таблетку следует постепенно рассасывать во рту.
@@ -55,9 +55,9 @@ block content
         .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
-          Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
-          Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
-          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
+          Общество с ограниченной ответственностью «Тева»  Россия, 115054, 
+          город Москва, улица Валовая, дом 35<br>
+          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
         .holder
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
