--- a/app/contacts.jade
+++ b/app/contacts.jade
@@ -22,7 +22,7 @@ block content
     .map-info
       .info-block
         p.title Адрес офиса:
-        p ООО "Тева", бизнес-центр «Конкорд»<br>119049, г.Москва, ул. Шаболовка, 10, стр.2
+        p ООО "Тева", Россия, 115054, город Москва, <br/>улица Валовая, дом 35
       .info-block
         p.title Контактная информация:
         p.info-lines
@@ -43,9 +43,9 @@ block content
         .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
-          Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
-          Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
-          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
+          Общество с ограниченной ответственностью «Тева»  Россия, 115054, 
+          город Москва, улица Валовая, дом 35<br>
+          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
         .holder
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
