--- a/app/index.jade
+++ b/app/index.jade
@@ -36,7 +36,7 @@ block content
   .body-bottom
     .wrapper
       .title Традиционный или со вкусами мяты и вишни
-      p Гастал выпускается в форме вишневых и мятных таблеток для рассасывания, а также в форме таблеток для рассасывания без вкусовых добавок.
+      p Гастал<sup>&reg;</sup> выпускается в форме вишневых и мятных таблеток для рассасывания, а также в форме таблеток для рассасывания без вкусовых добавок.
     #footer
       .small-text
         p.
@@ -46,9 +46,9 @@ block content
         .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
-          Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
-          Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
-          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
+          Общество с ограниченной ответственностью «Тева»  Россия, 115054, 
+          город Москва, улица Валовая, дом 35<br>
+          Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
         .holder.
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
