--- a/app/articles.jade
+++ b/app/articles.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block vars
-  - var active = "faq"
+  - var active = "articles"
 
 block content
   .faq-product-main
@@ -21,11 +21,57 @@ block content
     .faq-left
       .articles-links
         .link
-          a(href="#").js-tab-link Гастал®? У меня на это пять причин...
+          a(href="#").js-tab-link Гастал<sup>&reg;</sup>? У меня на это пять причин...
           a(href="#").js-tab-link Профилактика изжоги
     .faq-right
       .js-tab
-        .faq-title Гастал®? У меня на это пять причин...
+        .faq-title Гастал<sup>&reg;</sup>? У меня на это пять причин...
+        .articles-text
+          p 
+            b Часто возникающая интенсивная изжога — это серьезный повод для того, чтобы обратиться за консультацией к врачу и пройти обследование.
+
+          p Однако в ряде случаев изжога может возникать у лиц, не страдающих заболеваниями желудочно-кишечного тракта и носит ситуативный характер. Например, она нередко появляется при приеме определенных лекарственных препаратов, а также  после обильной пищи, чаще острой или углеводистой. Изжогу могут вызывать пережаренные жирные блюда, крепкий чай, кофе, свежий черный хлеб, кислые ягоды и фрукты, шипучие напитки, пиво и коньяк.
+          p Каковы бы ни были причины возникновения изжоги, она всегда подступает внезапно, доставив массу неприятных ощущений.
+
+          p Изжога – чувство жжения за грудиной, часто сопровождающееся тошнотой, отрыжкой и горечью во рту – бич современного общества. Неправильный режим питания, чрезмерное увлечение фаст-фудом, вредные привычки и малоподвижный  образ жизни – всё это способствует нарушению функций  желудка и кишечника. Чаще всего изжога встречается у молодых людей и у людей с повышенным весом, но иногда в группу риска попадают и с виду здоровые люди, активно занимающиеся учебой или карьерой: они всегда спешат, часто перекусывают на ходу, запивая шипучими напитками, и такое нездоровое питание чаще всего и вызывает изжогу. Если вы столкнулись с изжогой впервые, стоит воспринять ее как сигнал немного пересмотреть образ жизни, изменить рацион в пользу увеличения здоровой пищи. Если же неприятные ощущения повторяются периодически, правильнее всего будет обратиться к врачу, ведь изжога может быть признаком серьезных заболеваний, в первую очередь –  гастроэзофагеальной рефлюксной болезни.
+
+          p Раствор питьевой соды — известный уже много лет способ избавления от изжоги. Однако, мало того, что он далеко не так эффективен, как специальные препараты от изжоги, так еще и может ухудшить  самочувствие. При приеме соды в желудке происходит химическая реакция, в результате которой выделяется достаточно большое количество углекислого газа растягивает стенки желудка, вызывая повторный заброс кислоты в пищевод. Кроме этого, пищевая сода настолько быстро и резко снижает уровень кислотности,  что желудок стремится немедленно восполнить объем соляной кислоты (ведь она нужна для нормального переваривания пищи) и вырабатывает дополнительные порции, в результате возникает избыток кислоты в желудке, и  изжога возникает вновь. Это явление специалисты называют «кислотный рикошет» — повторная изжога, возникающая уже после приема препарата от изжоги. Этим негативным свойством обладает как пищевая сода, так и ряд «содоподобных»¹ антацидных препаратов².
+
+          p Однако не все препараты одинаковы! Важно выбирать средства, которые помогают быстро устранить изжогу без ущерба для собственного здоровья и защитить желудок от негативных факторов, возникающих во время изжоги и раздражающих слизистую оболочку стенки желудка и пищевода. Одним из таких средств является хорошо известный препарат Гастал®, который можно приобрести практически в каждой российской аптеке.
+
+          p Какими достоинствами обладает препарат Гастал<sup>&reg;</sup>?
+
+          p.ptitle 1. Изученное специалистами и проверенное временем средство
+          p Важно, чтобы антацидный препарат выполнял свое прямое назначение – нейтрализовывал избыток кислоты в желудке и не обладал способностью всасываться через стенки желудка, а выводился из организма после окончания его действия, не оказывая влияния на другие органы и ткани.
+
+          p Учитывая такой подход, доктора разделяют антацидные препараты  на всасывающиеся (или «содоподобные»), и невсасывающиеся. Всасывающиеся -«содоподобные» антациды при высокой скорости нейтрализации повышенной кислотности обладают рядом недостатков.
+
+          p Во-первых, такие препараты действительно очень быстро снимают изжогу, но при этом уровень кислотности снижается настолько значительно, что происходит компенсаторная дополнительная выработка соляной кислоты желудка, как в случае приема пищевой соды, и изжога возникает вновь. Возникает так называемый «кислотный рикошет». Получается, что пытаться устранить изжогу препаратами с «кислотным рикошетом» не всегда эффективно и безопасно: изжога сначала быстро исчезает, но затем может возникнуть снова, и ощущается еще более остро, при этом повторяющиеся приступы изжоги только еще сильнее раздражают стенки  пищевода.
+
+          p Во-вторых, нейтрализация кислоты сопровождается выделением углекислого газа, который  растягивает стенки желудка, и этот процесс  также провоцирует заброс кислоты желудка в пищевод.
+
+          p В отличие от таких препаратов Гастал<sup>&reg;</sup>, который относится к группе невсасывающихся антацидов, такими негативными факторами не обладает.
+          p Гастал® снижает кислотность быстро и только до физиологического уровня, что позволяет устранить изжогу без «кислотного рикошета» и перерастяжения стенок желудка.
+
+          p.ptitle 2. Длительное действие
+          p Терапевтический эффект при приеме Гастала достигается  благодаря комбинированному составу — комплексу гидроксидов алюминия и магния. Такое сочетание является одним из наиболее оптимальных в терапии изжоги. Эта комбинация, с одной стороны быстро устраняет «жжение» в пищеводе, а с другой позволяет нормализовать состояние  желудка на достаточно продолжительное время³.
+
+          p.ptitle 3.  Защитное действие
+          p Гастал<sup>&reg;</sup>, как и другие невсасывающиеся антациды, обладает высокой адсорбирующей способностью —  связывает факторы агрессии, возникающие при изжоге и выводит их из организма.
+          p Алюминия гидроксид-магния карбоната гель в составе препарата не только быстро устраняет изжогу, но и обладает способностью длительно³ нейтрализовать избыток кислоты в желудке, при этом защищая и восстанавливая поврежденную кислотой слизистую.
+
+          p.ptitle 4. Оптимальный уровень кислотности
+          p Важно, что Гастал<sup>&reg;</sup> снижает кислотность только до рH 3-5 и в дальнейшем позволяет контролировать длительное³ поддержание физиологической среды в желудке, при которой не страдает процесс пищеварения и не возникает «феномен кислотного рикошета».
+
+          p.ptitle 5. Удобство применения
+          p Таблетка Гастала удобна в применении и для тех покупателей, которые предпочитают препараты в форме таблеток, и для тех, кто привык и любит использовать жидкие  формы (суспензии). Дело в том, что таблетка представляет собой высушенный гель, который в полости рта быстро преобразуется в нежный по консистенции гель. Таблетки  для рассасывания не требуют запивания, поэтому удобны для приема в любой ситуации.
+          .bottom-desc
+            p <sup>1</sup> Содоподобные средства – средства, содержащие только карбонаты или гидрокарбонаты в качестве основного активного компонента.
+            p <sup>2</sup> Бордин Д.С. Преимущества невсасывающихся антацидов // Лечащий Врач. – 2011. – № 2. С. 50-55
+            p <sup>3</sup> продолжительность действия около двух часов. Инструкция по медицинскому применению препарата Гастал<sup>&reg;</sup>
+            p Топчий Н.В., Топорков А.С., Ренессанс антацидов - надежная помощь врачу общей практики, Русский медицинский журнал, 2013, № 13, С. 724-730
+      .js-tab
+        .faq-title Профилактика изжоги
         .articles-text
           p Как известно, профилактика всегда лучше лечения. Избежать изжоги довольно легко, если вы придерживаетесь правильного питания и занимаетесь спортом.
 
@@ -44,51 +90,6 @@ block content
           p 5) Употреблять молоко и молочные продукты, за исключением острых сортов сыра.
           p 6) Свести к минимуму употребление кофе.
           p 7) Заниматься спортом или, по крайней мере, больше двигаться.
-      .js-tab
-        .faq-title Профилактика изжоги
-        .articles-text
-          p Часто возникающая интенсивная изжога — это серьезный повод для того, чтобы обратиться за консультацией к врачу и пройти обследование.
-
-          p Однако в ряде случаев изжога может возникать у лиц, не страдающих заболеваниями желудочно-кишечного тракта и носит ситуативный характер. Например, она нередко появляется при приеме определенных лекарственных препаратов, а также  после обильной пищи, чаще острой или углеводистой. Изжогу могут вызывать пережаренные жирные блюда, крепкий чай, кофе, свежий черный хлеб, кислые ягоды и фрукты, шипучие напитки, пиво и коньяк.
-          p Каковы бы ни были причины возникновения изжоги, она всегда подступает внезапно, доставив массу неприятных ощущений.
-
-          p Изжога – чувство жжения за грудиной, часто сопровождающееся тошнотой, отрыжкой и горечью во рту – бич современного общества. Неправильный режим питания, чрезмерное увлечение фаст-фудом, вредные привычки и малоподвижный  образ жизни – всё это способствует нарушению функций  желудка и кишечника. Чаще всего изжога встречается у молодых людей и у людей с повышенным весом, но иногда в группу риска попадают и с виду здоровые люди, активно занимающиеся учебой или карьерой: они всегда спешат, часто перекусывают на ходу, запивая шипучими напитками, и такое нездоровое питание чаще всего и вызывает изжогу. Если вы столкнулись с изжогой впервые, стоит воспринять ее как сигнал немного пересмотреть образ жизни, изменить рацион в пользу увеличения здоровой пищи. Если же неприятные ощущения повторяются периодически, правильнее всего будет обратиться к врачу, ведь изжога может быть признаком серьезных заболеваний, в первую очередь –  гастроэзофагеальной рефлюксной болезни.
-
-          p Раствор питьевой соды — известный уже много лет способ избавления от изжоги. Однако, мало того, что он далеко не так эффективен, как специальные препараты от изжоги, так еще и может ухудшить  самочувствие. При приеме соды в желудке происходит химическая реакция, в результате которой выделяется достаточно большое количество углекислого газа растягивает стенки желудка, вызывая повторный заброс кислоты в пищевод. Кроме этого, пищевая сода настолько быстро и резко снижает уровень кислотности,  что желудок стремится немедленно восполнить объем соляной кислоты (ведь она нужна для нормального переваривания пищи) и вырабатывает дополнительные порции, в результате возникает избыток кислоты в желудке, и  изжога возникает вновь. Это явление специалисты называют «кислотный рикошет» — повторная изжога, возникающая уже после приема препарата от изжоги. Этим негативным свойством обладает как пищевая сода, так и ряд «содоподобных»¹ антацидных препаратов².
-
-          p Однако не все препараты одинаковы! Важно выбирать средства, которые помогают быстро устранить изжогу без ущерба для собственного здоровья и защитить желудок от негативных факторов, возникающих во время изжоги и раздражающих слизистую оболочку стенки желудка и пищевода. Одним из таких средств является хорошо известный препарат Гастал®, который можно приобрести практически в каждой российской аптеке.
-
-          p Какими достоинствами обладает препарат Гастал®?
-
-          p.ptitle 1. Изученное специалистами и проверенное временем средство
-          p Важно, чтобы антацидный препарат выполнял свое прямое назначение – нейтрализовывал избыток кислоты в желудке и не обладал способностью всасываться через стенки желудка, а выводился из организма после окончания его действия, не оказывая влияния на другие органы и ткани.
-
-          p Учитывая такой подход, доктора разделяют антацидные препараты  на всасывающиеся (или «содоподобные»), и невсасывающиеся. Всасывающиеся -«содоподобные» антациды при высокой скорости нейтрализации повышенной кислотности обладают рядом недостатков.
-
-          p Во-первых, такие препараты действительно очень быстро снимают изжогу, но при этом уровень кислотности снижается настолько значительно, что происходит компенсаторная дополнительная выработка соляной кислоты желудка, как в случае приема пищевой соды, и изжога возникает вновь. Возникает так называемый «кислотный рикошет». Получается, что пытаться устранить изжогу препаратами с «кислотным рикошетом» не всегда эффективно и безопасно: изжога сначала быстро исчезает, но затем может возникнуть снова, и ощущается еще более остро, при этом повторяющиеся приступы изжоги только еще сильнее раздражают стенки  пищевода.
-
-          p Во-вторых, нейтрализация кислоты сопровождается выделением углекислого газа, который  растягивает стенки желудка, и этот процесс  также провоцирует заброс кислоты желудка в пищевод.
-
-          p В отличие от таких препаратов Гастал®, который относится к группе невсасывающихся антацидов, такими негативными факторами не обладает.
-          p Гастал® снижает кислотность быстро и только до физиологического уровня, что позволяет устранить изжогу без «кислотного рикошета» и перерастяжения стенок желудка.
-
-          p.ptitle 2. Длительное действие
-          p Терапевтический эффект при приеме Гастала достигается  благодаря комбинированному составу — комплексу гидроксидов алюминия и магния. Такое сочетание является одним из наиболее оптимальных в терапии изжоги. Эта комбинация, с одной стороны быстро устраняет «жжение» в пищеводе, а с другой позволяет нормализовать состояние  желудка на достаточно продолжительное время³.
-
-          p.ptitle 3.  Защитное действие
-          p Гастал®, как и другие невсасывающиеся антациды, обладает высокой адсорбирующей способностью —  связывает факторы агрессии, возникающие при изжоге и выводит их из организма.
-          p Алюминия гидроксид-магния карбоната гель в составе препарата не только быстро устраняет изжогу, но и обладает способностью длительно³ нейтрализовать избыток кислоты в желудке, при этом защищая и восстанавливая поврежденную кислотой слизистую.
-
-          p.ptitle 4. Оптимальный уровень кислотности
-          p Важно, что Гастал® снижает кислотность только до рH 3-5 и в дальнейшем позволяет контролировать длительное³ поддержание физиологической среды в желудке, при которой не страдает процесс пищеварения и не возникает «феномен кислотного рикошета».
-
-          p.ptitle 5. Удобство применения
-          p Таблетка Гастала удобна в применении и для тех покупателей, которые предпочитают препараты в форме таблеток, и для тех, кто привык и любит использовать жидкие  формы (суспензии). Дело в том, что таблетка представляет собой высушенный гель, который в полости рта быстро преобразуется в нежный по консистенции гель. Таблетки  для рассасывания не требуют запивания, поэтому удобны для приема в любой ситуации.
-          .bottom-desc
-            p <sup>1</sup> Содоподобные средства – средства, содержащие только карбонаты или гидрокарбонаты в качестве основного активного компонента.
-            p <sup>2</sup> Бордин Д.С. Преимущества невсасывающихся антацидов // Лечащий Врач. – 2011. – № 2. С. 50-55
-            p <sup>3</sup> продолжительность действия около двух часов. Инструкция по медицинскому применению препарата Гастал®
-            p Топчий Н.В., Топорков А.С., Ренессанс антацидов - надежная помощь врачу общей практики, Русский медицинский журнал, 2013, № 13, С. 724-730
   .body-bottom
     #footer
       .small-text
